test(ktnconst): improve testdata coverage for const rules
- const001: add all numeric types (byte, int8-64, uint8-64, float32,
  complex64, uintptr) and custom type to good.go
- const001: add more untypes constants to bad.go (16 errors total)
- const002: add functions to validate full declaration order
- const002: add iota pattern within main const block
- const003: add underscore edge cases (double, trailing, leading)
- const003: add constants without type and very long names
- Enable Go feature in devcontainer for testing

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -13,7 +13,7 @@
     // "./features/languages/cpp": {},
     // "./features/languages/dart-flutter": {},
     // "./features/languages/elixir": {},
-    // "./features/languages/go": {},
+    "./features/languages/go": {},
     // "./features/languages/java": {},
     // "./features/languages/php": {},
     // "./features/languages/python": {},
