chore: remove NEW.md from git and update exclusions
- Remove plans/NEW.md from git tracking (moved to .devcontainer/docs/)
- Add .devcontainer/docs/** to Codacy exclusions
- Add plans/ and .devcontainer/docs/*.md to .gitignore

--- a/.codacy.yml
+++ b/.codacy.yml
@@ -4,7 +4,8 @@
 
 # Exclude patterns - files that should not be analyzed
 exclude_paths:
-  # DevContainer generated files with secrets
+  # DevContainer internal docs and generated files
+  - '.devcontainer/docs/**'
   - '.devcontainer/mcp.json'
 
   # Standard exclusions
